# the-deep-field

./: .gitignore  README.md
Building small and effective language models/: README.md
Internal Cognition/: README.md
Understanding confidence in large language models/: README.md  dowloading_model.py  pyproject.toml
Understanding confidence in large language models/dataset/: dowload.py
