[project]
name = "understanding-confidence-in-large-language-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "psutil>=7.2.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
